Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-4166

Qt Creator crash with qml designer

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • Qt Creator 2.2.0
    • Qt Creator 2.1.0
    • Quick Designer
    • None
    • Window XP SP3
    • 36e1a6a882d70c1e7b51fb5da6767fe8e27eacfb

    Description

      There is also the same problem with Qt Creator 2.1.81.

      reprodution steps:
      1. Open Qt Creator.
      2. drag a .qs or .js file into Qt Creator.See BeforeDrag.jpg and AfterDrag.jpg.
      3. Notice that after the file is draged into Creator the Design button is enabled.Click Design button.
      4. Click inside the red rectangle area.

      Attachments

        1. AfterDrag.jpg
          AfterDrag.jpg
          3.75 MB
        2. BeforeDrag.jpg
          BeforeDrag.jpg
          3.75 MB
        3. qtcreator_crash.jpg
          qtcreator_crash.jpg
          3.75 MB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            thohartm Thomas Hartmann
            liuuxlii Liu LI
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes