QmlDesigner: enable Qt Quick Designer just for qml files

No .js files in the visual designer.

Task-number: QTCREATORBUG-4166
Reviewed-by: Kai Koehne